Bug 515051 - Reduce the amount of space needed for collapsing sections in the editor pane

--- a/bundles/org.eclipse.orion.client.git/web/git/css/git.css
+++ b/bundles/org.eclipse.orion.client.git/web/git/css/git.css
@@ -575,7 +575,12 @@ _:-moz-tree-row(hover), .gitChangeListCheck { /* Firefox  HACK */
 .sectionTitle {
 	font-size: 12px;
 	font-weight: normal !important;
+	margin-top: 5px;
 	padding-bottom: 3px;
+}
+
+.sectionWrapper {
+	padding: 6px;
 }
 
 .gitCommitListLoaded {
