--- a/bundles/org.eclipse.orion.client.ui/web/css/sections.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/sections.css
@@ -11,11 +11,11 @@ html[dir="rtl"] .sectionIcon { /* ACGC */
 }
 
 .sectionTitle {
-	margin-top: 5px;
+	margin-top: 2px;
 }
 
 .sectionTitleTwistie {
-	margin-top: 2px;
+	margin-top: 0px;
 }
 
 .sectionItemCount {
